--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.7",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "aws-cdk": "2.94.0",
+    "eslint": "^8.57.0",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.94.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.94.0",
     "constructs": "^10.0.0",
+    "prettier": "^3.2.5",
     "source-map-support": "^0.5.21"
   }
 }
